--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand" href="index.html">Thorin &amp; Company</a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -54,15 +54,15 @@
     <!-- Page Header -->
     <header
       class="masthead"
-      style="background-image: url('{{ url_for('static', filename='img/home-bg.jpg') }}')"
+      style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')"
     >
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Clean Blog</h1>
-              <span class="subheading">A Blog Theme by Start Bootstrap</span>
+              <h1>Thorin &amp; Company</h1>
+              <span class="subheading">Thorin and his company</span>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
               </li>
             </ul>
             <p class="copyright text-muted">
-              Copyright &copy; Your Website 2020
+              Copyright &copy; <a href="https://dianecorriette.com" target="_blank">Diane Corriette.</a> Project created September 2023
             </p>
           </div>
         </div>
