--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Thorin &amp; Company</h1>
-              <span class="subheading">Thorin and his company</span>
+              <span class="subheading">Thorin and his company of soliders</span>
             </div>
           </div>
         </div>
