--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     type="text/css">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}" type="text/css">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    <title>Hello Flask</title>
+    <title>Thorin &amp; Company</title>
   </head>
 
   <body>
