Update content on index, about and careers pages

--- a/templates/careers.html
+++ b/templates/careers.html
@@ -1,3 +1,73 @@
 {% extends "base.html" %} {% block content %}
 <h2>{{ page_title }}</h2>
+<div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="post-preview">
+            <a href="#">
+                <h2 class="post-title">
+                    Keeper of the Lonely Mountain
+                </h2>
+                <h3 class="post-subtitle">
+                    Join Bilbo and Óin as a keeper of the mountain.
+                    Click here for more details and to apply.
+                </h3>
+            </a>
+            <p class="post-meta">Posted by
+                <a href="#">Gandalf</a>
+                on September 14, 2023
+            </p>
+        </div>
+        <hr>
+        <div class="post-preview">
+            <a href="#">
+                <h2 class="post-title">
+                Battle of Six Armies
+                </h2>
+                <h3 class="post-subtitle">
+                    Warriors needed for the next battle.
+                    Click here for more details and to apply.
+                </h3>
+            </a>
+            <p class="post-meta">Posted by
+                <a href="#">Bilbo Baggins</a>
+                on September 12, 2023
+            </p>
+        </div>
+        <hr>
+        <div class="post-preview">
+            <a href="#">
+                <h2 class="post-title">
+                    Third Age Life Coach
+                </h2>
+                <h3 class="post-subtitle">
+                    Can you be a life coach to our family?
+                </h3>
+            </a>
+            <p class="post-meta">Posted by
+                <a href="#">Gondor</a>
+                on August 24, 2023
+            </p>
+        </div>
+        <hr>
+        <div class="post-preview">
+            <a href="post.html">
+                <h2 class="post-title">
+                    Chief Aide to Bilbo Baggins
+                </h2>
+                <h3 class="post-subtitle">
+                    He likes to nick stuff. Fancy helping him? Click here to apply.
+                </h3>
+            </a>
+            <p class="post-meta">Posted by
+                <a href="#">Frodo Baggins</a>
+                on July 8, 2023
+            </p>
+        </div>
+        <hr>
+        <!-- Pager -->
+        <div class="clearfix">
+            <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+        </div>
+    </div>
+</div>
 {% endblock %}
