--- a/templates/index.html
+++ b/templates/index.html
@@ -1,68 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="row">
-    <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="post-preview">
-            <a href="post.html">
-                <h2 class="post-title">
-                    Man must explore, and this is exploration at its greatest
-                </h2>
-                <h3 class="post-subtitle">
-                    Problems look mighty small from 150 miles up
-                </h3>
-            </a>
-            <p class="post-meta">Posted by
-                <a href="#">Start Bootstrap</a>
-                on September 24, 2019
-            </p>
-        </div>
-        <hr>
-        <div class="post-preview">
-            <a href="post.html">
-                <h2 class="post-title">
-                    I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.
-                </h2>
-            </a>
-            <p class="post-meta">Posted by
-                <a href="#">Start Bootstrap</a>
-                on September 18, 2019
-            </p>
-        </div>
-        <hr>
-        <div class="post-preview">
-            <a href="post.html">
-                <h2 class="post-title">
-                    Science has not yet mastered prophecy
-                </h2>
-                <h3 class="post-subtitle">
-                    We predict too much for the next year and yet far too little for the next ten.
-                </h3>
-            </a>
-            <p class="post-meta">Posted by
-                <a href="#">Start Bootstrap</a>
-                on August 24, 2019
-            </p>
-        </div>
-        <hr>
-        <div class="post-preview">
-            <a href="post.html">
-                <h2 class="post-title">
-                    Failure is not an option
-                </h2>
-                <h3 class="post-subtitle">
-                    Many say exploration is part of our destiny, but it’s actually our duty to future generations.
-                </h3>
-            </a>
-            <p class="post-meta">Posted by
-                <a href="#">Start Bootstrap</a>
-                on July 8, 2019
-            </p>
-        </div>
-        <hr>
-        <!-- Pager -->
-        <div class="clearfix">
-            <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
-        </div>
-    </div>
-</div>
+<h2>Welcome</h2>
+<p>
+    The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest in
+    recapturing his long lost family inheritance. (Thorin's grandfather had been the king of the Lonely Mountain when
+    Smaug came and took it.) Remembering that he had once known an adventurous Hobbit on his travels in the Shire,
+    Gandalf decided to add Bilbo to their company because he knew that stealth and cunning were preferable to force.
+    Gandalf also believed that someone like Bilbo could keep the sometimes prideful and stubborn Dwarves from rash
+    action. The superstitious Dwarves also considered thirteen to be an unlucky number, and as Gandalf had planned to
+    leave on other business, welcomed a fourteenth to fill into their party.
+</p>
+
+<p>
+    In the long term, the journey of Thorin and Company and the situations it created led to the Council of Elrond and the
+    formation of the Fellowship of the Ring many years later and played a major part setting in motion in the events of the
+    War of the Ring.
+</p>
+
 {% endblock %}
