--- a/templates/about.html
+++ b/templates/about.html
@@ -3,13 +3,9 @@
 
 <h2>{{ page_title }}</h2>
 <p>
-    The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest in
-    recapturing his long lost family inheritance. (Thorin's grandfather had been the king of the Lonely Mountain when
-    Smaug came and took it.) Remembering that he had once known an adventurous Hobbit on his travels in the Shire,
-    Gandalf decided to add Bilbo to their company because he knew that stealth and cunning were preferable to force.
-    Gandalf also believed that someone like Bilbo could keep the sometimes prideful and stubborn Dwarves from rash
-    action. The superstitious Dwarves also considered thirteen to be an unlucky number, and as Gandalf had planned to
-    leave on other business, welcomed a fourteenth to fill into their party.
+    Meet Thorin and his team including the mighty Gandalf. The deeds of Thorin and Company led to the restoration of the
+    Dwarven Kingdom of the Lonely Mountain and the kingdom of
+    Dale, the rebuilding of Lake-town, and restoration of peace and prosperity in the immediate area for many years.
 </p>
 
 {% for member in company %}
